Make PAM gem optional, allow configuration over environment (#6415)

--- a/.env.production.sample
+++ b/.env.production.sample
@@ -136,6 +136,15 @@ STREAMING_CLUSTER_NUM=1
 # UID=1000
 # GID=1000
 
+# PAM authentication (optional)
+# PAM_ENABLED=true
+# Suffix for email address generation (nil by default)
+# PAM_DEFAULT_SUFFIX=pam
+# Name of the pam service (pam "auth" section is evaluated)
+# PAM_DEFAULT_SERVICE=rpam
+# Name of the pam service used for checking if an user can register (pam "account" section is evaluated)
+# PAM_CONTROLLED_SERVICE=rpam
+
 # Optional CAS authentication (cf. omniauth-cas) :
 # CAS_ENABLED=true
 # CAS_URL=https://sso.myserver.com/
